# quik_config_python

./: README.md  pyproject.toml
commands/: update_dependencies
logs/autolog/hi348dc09/: running_data.yaml  specific_config.yaml
main/: info.yaml  setup.py
main/quik_config/: __init__.py  main.py  settings.json
main/quik_config/__dependencies__/: __init__.py  settings.json
main/quik_config/__dependencies__/__sources__/ez_yaml/: .gitrepo
main/quik_config/__dependencies__/__sources__/super_hash/: .gitrepo
main/quik_config/__dependencies__/__sources__/super_map/: .gitrepo
main/quik_config/__dependencies__/__sources__/super_map/main/super_map/: __init__.py
run/: tests.ps1
settings/during_start/: 001_000__setup_zsh__.sh
settings/home/: .zshrc
tests/: actually_test_inherit.sh  basic.py  info.yaml  main.py  source1.yaml  source2.yaml  test_args.py  test_logs.py  test_logs_2.py
